--- a/pokéStyles.css
+++ b/pokéStyles.css
@@ -1,6 +1,6 @@
 #title {
     font-family:sans-serif;
-    font-size: 56px;
+    font-size: 58px;
     font-weight: 700;
     line-height: 77px;
     letter-spacing: 0em;
@@ -21,10 +21,19 @@
 }
 
 #infoCard {
-    width: 400px;   
+    width: 385px;   
     height: 460px;
     background: #E8E8E8;
     margin-top: -8px;
+    color: #000;
+    font-family: sans-serif;
+    font-size: 26px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 0.5;
+    padding-left: 25px;
+    padding-top: 15px;
+    padding-right: 25px;
 }
 
 .info {
@@ -38,11 +47,6 @@
     display: flex;
     flex-direction: row;
     margin-top: 32px;
-    color: #000;
-    font-family: sans-serif;
-    font-size: 32px;
-    font-style: normal;
-    font-weight: 400;
 }
 
 #infoButton {
@@ -53,6 +57,18 @@
     margin-right: 20px;
     text-align: center;
     line-height: 68px;
+    color: #000;
+    font-family: sans-serif;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 400;
+    border-color:#E8E8E8;
+    border: none;
+    outline: none;
+}
+
+#infoButton:hover {
+    cursor: pointer;
 }
 
 #movesButton {
@@ -62,6 +78,18 @@
     background: #E8E8E8;
     text-align: center;
     line-height: 68px;
+    color: #000;
+    font-family: sans-serif;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 400;
+    border: none;
+    outline: none;
+    
+}
+
+#movesButton:hover {
+    cursor: pointer;
 }
 
 .leftSide {
@@ -70,13 +98,14 @@
     margin-left: 175px;
 }
 
-.poke-pic {
+#poke-pic {
     width: 370px;
     height: 370px;
     flex-shrink: 0;
     margin-top: 10px;
     border: 4px solid #000;
-    background: url(<path-to-image>), lightgray 50% / cover no-repeat;
+    border-width: 3px;
+    background: white;
 }
 
 #poke-name {
@@ -121,7 +150,7 @@
     font-weight: 400;
 }
 
-#normal {
+#one {
     width: 113px;
     height: 36px;
     border-radius: 10px;
@@ -131,7 +160,7 @@
     line-height: 35px;
 }
 
-#other1 {
+#two {
     width: 113px;
     height: 36px;
     border-radius: 10px;
@@ -141,7 +170,7 @@
     line-height: 35px;
 }
 
-#other2 {
+#three {
     width: 113px;
     height: 36px;
     border-radius: 10px;
@@ -156,11 +185,6 @@
     flex-direction: row;
     justify-content: center;
     margin-top: 27px;
-    color: #000;
-    font-family: sans-serif;
-    font-size: 32px;
-    font-style: normal;
-    font-weight: 400;
 }
 
 #leftArrow {
@@ -172,6 +196,17 @@
     line-height: 45px;
     margin-right: 40px;
     margin-left: -20px;
+    color: #000;
+    font-family: sans-serif;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 400;
+    border: none;
+    outline: none;
+}
+
+#leftArrow:hover {
+    cursor: pointer;
 }
 
 #rightArrow {
@@ -181,6 +216,17 @@
     background: #E8E8E8;
     text-align: center;
     line-height: 45px;
+    color: #000;
+    font-family: sans-serif;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 400;
+    border: none;
+    outline: none;
+}
+
+#rightArrow:hover {
+    cursor: pointer;
 }
 
 .page {
